hard-gists/ac9170132e5abfc5381353428e70f1d9/run.log
=== Docker Run Log for ac9170132e5abfc5381353428e70f1d9 ===
Started at: Mi 29. Okt 19:13:32 CET 2025

[2025-10-29 19:13:32] START: Running container for ac9170132e5abfc5381353428e70f1d9
[2025-10-29 19:13:33] SUCCESS: Container 85267b761af923ad2be431f327fb31797059598be0f03b65b2151c11e4f4d80b started for ac9170132e5abfc5381353428e70f1d9
=== Container logs for ac9170132e5abfc5381353428e70f1d9 ===
  File "/snippet.py", line 39
    print 'Connected'
    ^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for ac9170132e5abfc5381353428e70f1d9 ===
[2025-10-29 19:13:35] INFO: Container 85267b761af923ad2be431f327fb31797059598be0f03b65b2151c11e4f4d80b has stopped
